Converted from GraphQLResourceTopographicPlaceIntegrationTest.groovy to java